--- a/index.html
+++ b/index.html
@@ -4,14 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teachable Machine + p5.js</title>
+
+    <!-- Load Libraries -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/pose@0.8/dist/teachablemachine-pose.min.js"></script>
-    <script src="sketch.js"></script>
+
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+        }
+        #canvas-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-top: 20px;
+        }
+    </style>
 </head>
 <body>
     <h1>Teachable Machine + p5.js</h1>
     <p>Move your body to change colors!</p>
     <button onclick="initModel()">Start Model</button>
+
+    <!-- Canvas Container -->
+    <div id="canvas-container"></div>
+
+    <!-- Load sketch.js AFTER everything else -->
+    <script src="sketch.js"></script>
 </body>
 </html>
+
